--- a/Марунько_Анна_ПИ19_2_Курсовая_работа.ipynb
+++ b/Марунько_Анна_ПИ19_2_Курсовая_работа.ipynb
@@ -20,11 +20,10 @@
         "fI777lCNU_cM",
         "2cDtg5sQWgHV",
         "ovf3qydHcBU1",
-        "xfDSblVUhZME",
         "ecEj0AcejU-l"
       ],
       "mount_file_id": "1Pab6idKXf-yFvv7BdZP8Iby4o24UzymH",
-      "authorship_tag": "ABX9TyMedHrUuA4dv59BGddgekCm"
+      "authorship_tag": "ABX9TyMZKI90DafbKf3s5G00HKAW"
     },
     "kernelspec": {
       "name": "python3",
@@ -275,7 +274,7 @@
       "cell_type": "code",
       "source": [
         "import spacy\n",
-        "# use spacy.load('en') if you have downloaded the language model en directly after install spacy\n",
+        "\n",
         "nlp = spacy.load('en_core_web_sm')\n",
         "\n",
         "def lemmatize_text(text):\n",
@@ -354,35 +353,35 @@
         "                     stopword_removal=True, remove_digits=True):\n",
         "    \n",
         "    normalized_corpus = []\n",
-        "    # normalize each document in the corpus\n",
+        "\n",
         "    for doc in corpus:\n",
-        "        # strip HTML\n",
+        "\n",
         "        if html_stripping:\n",
         "            doc = strip_html_tags(doc)\n",
-        "        # remove accented characters\n",
+        "\n",
         "        if accented_char_removal:\n",
         "            doc = remove_accented_chars(doc)\n",
-        "        # expand contractions    \n",
-        "        #if contraction_expansion:\n",
-        "            #doc = expand_contractions(doc)\n",
-        "        # lowercase the text    \n",
+        "    \n",
+        "        if contraction_expansion:\n",
+        "            doc = expand_contractions(doc)\n",
+        " \n",
         "        if text_lower_case:\n",
         "            doc = doc.lower()\n",
-        "        # remove extra newlines\n",
+        "\n",
         "        doc = re.sub(r'[\\r|\\n|\\r\\n]+', ' ',doc)\n",
-        "        # lemmatize text\n",
+        "\n",
         "        if text_lemmatization:\n",
         "            doc = lemmatize_text(doc)\n",
-        "        # remove special characters and\\or digits    \n",
+        "   \n",
         "        if special_char_removal:\n",
-        "            # insert spaces between special characters to isolate them    \n",
+        " \n",
         "            special_char_pattern = re.compile(r'([[{.(-)!_}\\]])')\n",
         "            doc = special_char_pattern.sub(\" \\\\1 \", doc)\n",
         "            doc = re.sub(special_char_pattern, \"\", doc)\n",
         "            doc = remove_special_characters(doc, remove_digits=remove_digits)  \n",
-        "        # remove extra whitespace\n",
+        "\n",
         "        doc = re.sub(' +', ' ', doc)\n",
-        "        # remove stopwords\n",
+        "\n",
         "        if stopword_removal:\n",
         "            doc = remove_stopwords(doc, is_lower_case=text_lower_case)\n",
         "            \n",
@@ -828,7 +827,7 @@
         "\n",
         "import gensim\n",
         "bigram = gensim.models.Phrases(norm_fairy_tales_tkn, min_count=15, threshold=15,\n",
-        "                              delimiter='_') # higher threshold fewer phrases.\n",
+        "                              delimiter='_')\n",
         "bigram_model = gensim.models.phrases.Phraser(bigram)"
       ],
       "metadata": {
